@@ -23,8 +23,10 @@ import java.net.MalformedURLException;
 import java.net.URL;
 import java.net.URLClassLoader;
 import java.util.ArrayList;
+import java.util.HashMap;
 import java.util.List;
 import java.util.Locale;
+import java.util.Map;
 import java.util.PropertyResourceBundle;
 import java.util.ResourceBundle;
 
@@ -210,25 +212,56 @@ public class FxMain extends Application implements ConfigManager {
 			t.printStackTrace();
 		}
 
-		/*
-		 * // Filters completly in jar try { segmentFilters
-		 * .add(loadExternalFilterInstance(
-		 * "de.serviceflow.frankenstein.plugin.opencv.NativeExampleFilter"));
-		 * segmentFilters .add(loadExternalFilterInstance(
-		 * "de.serviceflow.frankenstein.plugin.opencv.VideoEqualizerFilter"));
-		 * segmentFilters .add(loadExternalFilterInstance(
-		 * "de.serviceflow.frankenstein.plugin.opencv.ExternalSampleFilter"));
-		 * segmentFilters .add(loadExternalFilterInstance(
-		 * "de.serviceflow.frankenstein.plugin.jogamp.GLExampleFilter")); }
-		 * catch (Throwable t) { t.printStackTrace(); }
-		 */
+		try {
+			String pluginOpenCVbase;
+			String pluginJogAmpbase;
+
+			String version = getClass().getPackage().getImplementationVersion();
+			String fs;
+			if (version != null && !version.endsWith("-SNAPSHOT")) {
+				fs = "/";
+				pluginOpenCVbase = "https://oss.sonatype.org/service/local/repositories/releases/content/de/serviceflow/frankenstein/plugin/opencv/plugin-opencv/"
+						+ version;
+				pluginJogAmpbase = "https://oss.sonatype.org/service/local/repositories/releases/content/de/serviceflow/frankenstein/plugin/jogamp/plugin-jogamp/"
+						+ version;
+			} else {
+				// Assume development environment in packaged state cwd = app/src/main/resources
+				// @todo Eclipse: https://stackoverflow.com/questions/6092200/how-to-fix-an-unsatisfiedlinkerror-cant-find-dependent-libraries-in-a-jni-pro
+				fs = File.separator;
+				version = "0.3.4-SNAPSHOT";
+				String baseFromAppResources = ".." + fs + ".." + fs + ".." + fs + ".." + fs;
+				pluginOpenCVbase = new File(System.getProperty("user.dir") + fs + baseFromAppResources + "plugin-opencv"
+						+ fs + "java" + fs + "target").toURI().toURL().toExternalForm();
+				pluginJogAmpbase = new File(System.getProperty("user.dir") + fs + baseFromAppResources + "plugin-jogamp"
+						+ fs + "java" + fs + "target").toURI().toURL().toExternalForm();
+			}
+
+			System.out.println("version (e.g. 0.3.3) = " + version);
+
+			String pluginOpenCVRef = pluginOpenCVbase + "/" + "plugin-opencv-" + version + ".jar";
+			String pluginJogAmpRef = pluginJogAmpbase + "/" + "plugin-jogamp-" + version + ".jar";
+
+			// Filters completly in jar
+//			segmentFilters.add(loadExternalFilterInstance(
+//					"de.serviceflow.frankenstein.plugin.opencv.NativeExampleFilter", pluginOpenCVRef));
+			segmentFilters.add(loadExternalFilterInstance(
+					"de.serviceflow.frankenstein.plugin.opencv.VideoEqualizerFilter", pluginOpenCVRef));
+			segmentFilters.add(loadExternalFilterInstance(
+					"de.serviceflow.frankenstein.plugin.opencv.ExternalSampleFilter", pluginOpenCVRef));
+			segmentFilters.add(loadExternalFilterInstance("de.serviceflow.frankenstein.plugin.jogamp.GLExampleFilter",
+					pluginJogAmpRef));
+		} catch (Throwable t) {
+			t.printStackTrace();
+		}
+
 	}
 
-	private SegmentVideoFilter loadExternalFilterInstance(String filterClassName) {
+	private SegmentVideoFilter loadExternalFilterInstance(String filterClassName, String ref) {
 		try {
 			// use dynamic loading and reflection when loading jni proxy class
 			// from jar, so app do not depend on it.
-			URLClassLoader childLoader = getLoader();
+			System.out.println("loading " + filterClassName + " from " + ref + " ...");
+			URLClassLoader childLoader = getLoader(ref);
 			Class filterClass = Class.forName(filterClassName, true, childLoader);
 			SegmentVideoFilter filter = (SegmentVideoFilter) filterClass.newInstance();
 			Method filterInitMethod = filterClass.getMethod("init");
@@ -237,22 +270,34 @@ public class FxMain extends Application implements ConfigManager {
 		} catch (ClassNotFoundException | InstantiationException | IllegalAccessException | NoSuchMethodException
 				| SecurityException | IllegalArgumentException | InvocationTargetException | MalformedURLException e) {
 			throw new RuntimeException(
-					"jni wrapper creation failed. Bug-Mining: Ensure the wrapper was added to the javahClassNames in pom.xml. Check NativeCode.h for existing and proper signatures.",
+					"Failed loading filter " + filterClassName + " from " + ref,
 					e);
 		}
 	}
 
-	static URLClassLoader loader = null;
+	static Map<String, URLClassLoader> loaders = new HashMap<String, URLClassLoader>();
 
-	static synchronized URLClassLoader getLoader() throws MalformedURLException {
+	static synchronized URLClassLoader getLoader(String ref) throws MalformedURLException {
+		ref = ref.intern();
+		URLClassLoader loader = loaders.get(ref);
 		if (loader == null) {
-			final String RELEATIVE_TO_MAVEN_EXEC_CWD = "../../../target";
-			String pluginpath = System.getProperty("pluginpath", RELEATIVE_TO_MAVEN_EXEC_CWD);
-			File myJar = new File(new File(pluginpath), "plugin-opencv-0.3.1-SNAPSHOT.jar");
-			URL[] urls = new URL[] { myJar.toURI().toURL() };
-			loader = new URLClassLoader(urls, NativeSegmentFilter.class.getClassLoader());
+			URL[] urls = new URL[] { new URL(ref) };
+			loader = new URLClassLoader(urls, FxMain.class.getClassLoader());
+			loaders.put(ref, loader);
 		}
 		return loader;
 	}
 
+	/*
+	 * static URLClassLoader loader = null;
+	 * 
+	 * static synchronized URLClassLoader getLoader() throws
+	 * MalformedURLException { if (loader == null) { final String
+	 * RELEATIVE_TO_MAVEN_EXEC_CWD = "../../../target"; String pluginpath =
+	 * System.getProperty("pluginpath", RELEATIVE_TO_MAVEN_EXEC_CWD); File myJar
+	 * = new File(new File(pluginpath), "plugin-opencv-0.3.1-SNAPSHOT.jar");
+	 * URL[] urls = new URL[] { myJar.toURI().toURL() }; loader = new
+	 * URLClassLoader(urls, NativeSegmentFilter.class.getClassLoader()); }
+	 * return loader; }
+	 */
 }
